integrate CGI, should work after CGI is redone to use filename

--- a/src/Server/sample2.conf
+++ b/src/Server/sample2.conf
@@ -5,8 +5,12 @@ server {
 
     client_max_body_size 10M;
 
+
+	cgi_dir ./cgi-bin;
+    cgi_exten .py .sh;
+    cgi_executor /usr/bin/python /bin/bash;
     # Route configuration
-    location /hi {
+    location / {
         alias ../pages;
 		save_dir /uploads2;
         # index ;
@@ -46,7 +50,7 @@ server {
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
-    cgi_executor /usr/bin/python3;
+    cgi_executor /usr/bin/python;
 
     # Route configuration
     location /hi {
@@ -84,7 +88,7 @@ server {
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
-    cgi_executor /usr/bin/python3;
+    cgi_executor /usr/bin/python;
     
     # Route configuration
     location /hi {
