add allowed method checking

--- a/src/Server/sample2.conf
+++ b/src/Server/sample2.conf
@@ -20,7 +20,7 @@ server {
         # cgi-path /test/cgi-bin;
         autoindex on;
         index testPage.html;
-        # allowed_method DELETE GET POST HEAD;
+        allowed_method HEAD;
     }
 
     location /kapouet {
@@ -29,6 +29,7 @@ server {
         autoindex on;
 		#return /hi;
         #index testPage.html;
+		allowed_method GET HEAD POST DELETE;
     }
 }
 
