add DELETE handling

--- a/src/Server/sample2.conf
+++ b/src/Server/sample2.conf
@@ -20,7 +20,7 @@ server {
         # cgi-path /test/cgi-bin;
         autoindex on;
         index testPage.html;
-        allowed_method HEAD;
+        allowed_method GET HEAD;
     }
 
     location /kapouet {
