--- a/src/Server/sample2.conf
+++ b/src/Server/sample2.conf
@@ -1,6 +1,5 @@
 server {
     listen  10001;
-    server_name localhost;
     host 127.0.0.1;
 
     client_max_body_size 10M;
@@ -20,7 +19,7 @@ server {
         # cgi-path /test/cgi-bin;
         autoindex on;
         index testPage.html;
-        allowed_method GET HEAD;
+        allowed_method GET HEAD POST DELETE;
     }
 
     location /kapouet {
@@ -36,7 +35,7 @@ server {
 # http://localhost:10001/kapouet/pouic/toto/pouet/testPage.html
 
 server {
-    listen  10002;
+    listen  10001;
     server_name webserv2;
     host 127.0.0.1;
 
