--- a/src/Server/sample2.conf
+++ b/src/Server/sample2.conf
@@ -19,6 +19,19 @@ server {
         # cgi-path /test/cgi-bin;
         autoindex on;
         index testPage.html;
+        allowed_method GET HEAD;
+    }
+
+	location /upload {
+        alias ../pages;
+		save_dir /uploads2;
+        # index ;
+        # return /pages;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+        autoindex on;
+        index testPage.html;
         allowed_method GET HEAD POST DELETE;
     }
 
@@ -35,7 +48,7 @@ server {
 # http://localhost:10001/kapouet/pouic/toto/pouet/testPage.html
 
 server {
-    listen  10001;
+    listen  10002;
     server_name webserv2;
     host 127.0.0.1;
 
