--- a/src/index.conf
+++ b/src/index.conf
@@ -2,8 +2,8 @@ server {
     listen  10001;
 
     # Default error pages
-    error_page 404 /404.html;
-    error_page 421 /421.html;
+    error_page 404 pages/404.html;
+    error_page 421 pages/421.html;
 
     client_max_body_size 10M;
 
