--- a/configs/index.conf
+++ b/configs/index.conf
@@ -15,9 +15,9 @@ server {
 			allowed_method DELETE GET POST HEAD;
     }
 
-    location /upload {
-      alias /pages;
-			save_dir /upload;
+    location /upload {	
+			root /pages;
+			save_dir /;
 			autoindex off;
 			index uploadPage.html;
 			allowed_method DELETE GET POST HEAD;
