fix cat.sh, add cgi to index config

--- a/configs/index.conf
+++ b/configs/index.conf
@@ -7,6 +7,11 @@ server {
 
     client_max_body_size 10M;
 
+	cgi_dir ./cgi-bin/;
+    # cgi_exten .sh .py;
+    cgi_exten .py .sh;
+    cgi_executor /usr/bin/python /bin/bash;
+
     # Route configuration
     location / {
 			alias /pages;
