fix redirections, put directory listing path into defines, handle empty redirection case

--- a/configs/index.conf
+++ b/configs/index.conf
@@ -14,6 +14,7 @@ server {
 
     # Route configuration
     location / {
+			# return /upload;
 			alias /pages;
 			autoindex off;
 			index webservPage.html;
@@ -21,10 +22,20 @@ server {
     }
 
     location /upload {	
+			# return /uploads2;
 			root /pages;
 			save_dir /;
-			autoindex off;
+			autoindex on;
 			index uploadPage.html;
 			allowed_method DELETE GET POST HEAD;
-  }
+	}
+
+	location /uploads2 {	
+			return /;
+			root /pages;
+			save_dir /;
+			autoindex on;
+			index uploadPage.html;
+			allowed_method DELETE GET POST HEAD;
+	}
 }
