Add unit test for parsing conf files

--- a/configs/test_files/testInvalid.conf
+++ b/configs/test_files/testInvalid.conf
@@ -14,7 +14,6 @@ server {
 
     # Route configuration
     location / {
-			# return /upload;
 			alias /pages;
 			autoindex off;
 			index webservPage.html;
@@ -22,20 +21,10 @@ server {
     }
 
     location /upload {	
-			# return /uploads2;
 			root /pages;
 			save_dir /;
-			autoindex on;
+			autoindex off;
 			index uploadPage.html;
 			allowed_method DELETE GET POST HEAD;
-	}
+  }
 
-	location /uploads2 {	
-			return /;
-			root /pages;
-			save_dir /;
-			autoindex on;
-			index uploadPage.html;
-			allowed_method DELETE GET POST HEAD;
-	}
-}
