--- a/configs/test_files/testValid.conf
+++ b/configs/test_files/testValid.conf
@@ -1,5 +1,6 @@
 server {
     listen  10001;
+    server_name testServerName;
 
     # Default error pages
     error_page 404 pages/404.html;
@@ -14,7 +15,6 @@ server {
 
     # Route configuration
     location / {
-			# return /upload;
 			alias /pages;
 			autoindex off;
 			index webservPage.html;
@@ -22,20 +22,10 @@ server {
     }
 
     location /upload {	
-			# return /uploads2;
 			root /pages;
 			save_dir /;
-			autoindex on;
+			autoindex off;
 			index uploadPage.html;
 			allowed_method DELETE GET POST HEAD;
-	}
-
-	location /uploads2 {	
-			return /;
-			root /pages;
-			save_dir /;
-			autoindex on;
-			index uploadPage.html;
-			allowed_method DELETE GET POST HEAD;
-	}
+  }
 }
