Add test fixtures to unit parser test so that repetitive code can be removed

--- a/configs/test_files/testValid.conf
+++ b/configs/test_files/testValid.conf
@@ -15,6 +15,7 @@ server {
 
     # Route configuration
     location / {
+            root /pages0;
 			alias /pages;
 			autoindex off;
 			index webservPage.html;
@@ -22,7 +23,7 @@ server {
     }
 
     location /upload {	
-			root /pages;
+			root /pages1;
 			save_dir /;
 			autoindex off;
 			index uploadPage.html;
